--- a/big_data/kafka/springKafka/pom.xml
+++ b/big_data/kafka/springKafka/pom.xml
@@ -5,6 +5,8 @@
     <packaging>pom</packaging>
     <modules>
         <module>transaction</module>
+        <module>interceptor</module>
+        <module>stringSerializer</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
