--- a/big_data/kafka/springKafka/pom.xml
+++ b/big_data/kafka/springKafka/pom.xml
@@ -7,6 +7,7 @@
         <module>transaction</module>
         <module>interceptor</module>
         <module>stringSerializer</module>
+        <module>jsonSerializer</module>
     </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
