--- a/big_data/kafka/springKafka/pom.xml
+++ b/big_data/kafka/springKafka/pom.xml
@@ -10,7 +10,11 @@
         <module>jsonSerializer</module>
         <module>jsonMappings</module>
 		<module>recordLogging</module>
-	</modules>
+        <module>serializerResolver</module>
+		<module>headers</module>
+        <module>routingKafkaTemplate</module>
+        <module>ReplyingKafkaTemplate</module>
+    </modules>
     <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
